# ui-automata

./: Cargo.toml  README.md  workflow-schema.json
automata-browser/: Cargo.toml  README.md
automata-browser/src/: lib.rs  main.rs
automata-windows/: Cargo.toml  app.manifest
automata-windows/examples/: notepad.rs
automata-windows/src/: browser.rs  clipboard.rs  desktop.rs  dialog.rs  element.rs  element_info.rs  element_stub.rs  element_tree.rs  error.rs  input.rs  lib.rs  locator.rs  mouse.rs  mouse_hook.rs  overlay.rs  process.rs  selector.rs  task_view.rs  taskbar.rs  uia_probe.rs  util.rs  window.rs  windows_info.rs
install/: README.md  install-windows.ps1
ui-automata/: Cargo.toml  DEVELOPMENT.md  README.md  workflow-schema.json
ui-automata/src/: action.rs  condition.rs  debug.rs  duration.rs  error.rs  executor.rs  expression.rs  lib.rs  lint.rs  mock.rs  node_cache.rs  output.rs  plan.rs  platform.rs  recovery.rs  registry.rs  schema.rs  selector.rs  shadow_dom.rs  snapshot.rs  step.rs  tab_handle.rs  workflow.rs  yaml.rs
ui-automata/src/yaml/: runner.rs
ui-automata/tests/: capture.rs  expression.rs  extract.rs  finally.rs  precondition.rs  registry.rs  schema.rs  selector.rs  snapshot.rs  step_flow.rs  sub_flow.rs
ui-automata/tests/common/: mod.rs
workflows/: AGENT.md  CLAUDE.md  LICENSE
workflows/browser/: AGENT.md  download_git.yml  install_git.md
workflows/control_panel/: firewall_settings.yml  mouse_settings.yml
workflows/mastercam/: launch.yml  open_file.yml  open_simulator.yml  post_process.py  process_file.yml  reset.yml  simulator_save_operation.yml
workflows/microsoft_store/: microsoft_store_install.yml  microsoft_store_search.yml
workflows/office/word/: hello_word.yml
workflows/win10/explorer/: explorer_about_windows.yml  explorer_hover_tooltip.yml  explorer_navigate.yml  explorer_open_folder.yml
workflows/win10/notepad/: notepad_close.yml  notepad_demo.yml  notepad_dialog_present.yml  notepad_extract_text.yml  notepad_hello.yml  notepad_loop_counter.yml  notepad_scroll_font.yml
workflows/win10/windows_settings/: settings_about.yml
workflows/win11/explorer/: explorer_add_tab.yml  explorer_navigate.yml  explorer_open_folder.yml
workflows/win11/notepad/: notepad_demo.yml  notepad_extract_text.yml  notepad_hello.yml  notepad_loop_counter.yml
workflows/win11/windows_settings/: settings_about.yml
workflows/winget/: install_git.md
