[workspace]
resolver = "2"
members = [
    "automata-browser", # public
    "automata-windows", # public
    "ui-automata", # public
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[workspace.dependencies]
# Core
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
winreg = "0.52"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

# Async / networking
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
base64 = "0.22"

# Web
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }

# Time / misc
chrono = "0.4"
dirs = "5.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

# Secrets
keyring = "3"

# Crypto / identity
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
glob = "0.3"

# ui-automata specific
fancy-regex = "0.17"
serde_yaml = "0.9"
bytes = "1"
schemars = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
rmcp = { version = "1.1", features = ["server", "client", "transport-streamable-http-server", "transport-streamable-http-client-reqwest", "transport-io"] }

# Windows (automata-windows)
uiautomation = "0.22.0"
windows = "0.61.3"

# ourselves
visioncortex = { path = "../visioncortex", version = "0.8" }
