[package]
name = "automata-browser"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
description = "Browser Control via CDP for UI Automation"
homepage = "http://www.visioncortex.org/ui-automata/"
repository = "https://github.com/visioncortex/ui-automata/"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "automata-browser"
path = "src/main.rs"

[lib]
name = "automata_browser"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
